backend/devops/php-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: seed-php
  labels:
    app: seed-php
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: seed-php
    spec:
      containers:
        - name: api-php
          image: "gcr.io/eto-mona-lisa/php:1.0.7" # NB: The 1.0.7 image have any security check on the API
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.11
          command: ["/cloud_sql_proxy",
                    "-instances=eto-mona-lisa:us-central1:database-eto=tcp:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
