backend/devops/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: seed-nginx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: seed-nginx
