backend/devops/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: seed-ingress
  labels:
    app: seed-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
